Fixed the game not working properly on mobile

--- a/Styles/lessStyles.less
+++ b/Styles/lessStyles.less
@@ -276,7 +276,7 @@ body {
     width: 50%;
     height: 100%;
 
-    > svg {
+    > div > svg {
       position: absolute;
       bottom: 10%;
       right: 0;
